fix(timeline): Modal close button not off screen

--- a/frontend/assets/css/timeline.scss
+++ b/frontend/assets/css/timeline.scss
@@ -293,7 +293,7 @@ html {
           width: 85vw;
           position: fixed;
           left: 50%;
-          height: 100vh;
+          height: 95vh;
           top: 50%;
           transform: translate(-50%, -50%);
           overflow-y: auto; // Enables vertical scrolling if needed
